# fastapi-motor-oil

./: 404.html  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  linters.yml
api-bound-method-wrapper/: index.html
api-delete-rule/: index.html
api-model/: index.html
api-service/: index.html
api-typing/: index.html
api-validator/: index.html
docs/: api-bound-method-wrapper.md  api-delete-rule.md  api-model.md  api-ref-validator.md  api-service.md  api-typing.md  fastapi-example.md  index.md
fastapi-example/: index.html
fastapi_motor_oil/: __init__.py  bound_method_wrapper.py  delete_rule.py  model.py  service.py  typing.py  validator.py
search/: search_index.json
